--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="I am 20 years old and I am a sneaker resalesman">
+  <meta name="author" content="abakh009">
 
-  <title>John Doe - Business Administration</title>
-
+  <title>Abanoub Bakhit - Business Administration</title>
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Abanoub Bakhit</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/AbanoubBakhit.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Abanoub Bakhit
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Owner📚</div>
+        <p class="lead mb-4">I set goals everytime I join a new team to start growing with them and as a person. I work well with teams, very communicative and always there to help customers and with any team member that needs it.<br><br>
 
-        Enter bio here<br><br>
+        I am a very eager learner, I believe that there is always room for improvement. I stay humble and try to know that there is always maybe someone that knows something I don't.<br><br>
 
-        Enter bio here
+        My passion always was shoes so I made a business from it and thats where I learned all the basics of becoming a business owner. I first learned how to negotiate so I was able to make deals then learned customer service so that I would be able to make sales.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/kingkickslw">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/abanoubbakhit/AbanoubBakhit-Resume">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/king_abanoub_a1">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:abakh009@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +95,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Became a sales representative for a dealership for BMW<br> 
+              • Worked a sneaker resale shop as a salesman and customer representative<br>
+              • Experience with HTML, CSS, Javascript, LearnCS8<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -156,18 +156,18 @@
             <div>MBA in International Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2020 - December 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <div class="subheading mb-3">Certificate in Business Management</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2023</span>
           </div>
         </div>
 
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/AbanoubBakhit(1).png" width="500px">
+            <img src="img/Deals.png" width="500px">
+            <img src="img/table.heic" width="500px">
+            <img src="img/essentials.webp" width="500px">
         </center>
       </div>
     </section>
